--- a/info.html
+++ b/info.html
@@ -1,1 +1,1 @@
-setURL("https://unitads.co/kurdishtv/channels/bet/beta/radianAccessDenied3.html"
+setURL("https://raw.githubusercontent.com/krdtv/app/main/radianAccessDenied3.html"
