--- a/radianAccessDenied3.html
+++ b/radianAccessDenied3.html
@@ -55,7 +55,7 @@ var live = getUrlVars()["live"];
 var ch = getUrlVars()["channel"];
 
                                     var src = {
-                                        hls: 'https://github.com/krdtv/app/raw/main/info.mp4',
+                                        hls: 'https://raw.githubusercontent.com/krdtv/app/main/info.mp4',
                                     };
 
                                     var settings = {
