--- a/info2.html
+++ b/info2.html
@@ -1,1 +1,1 @@
-setURL("https://raw.githubusercontent.com/krdtv/app/main/720p.php"
+setURL('https://raw.githubusercontent.com/krdtv/app/main/720p.php')
