--- a/info.html
+++ b/info.html
@@ -1,1 +1,5 @@
 setURL("https://raw.githubusercontent.com/krdtv/app/main/radianback.html"
+setURL("https://raw.githubusercontent.com/krdtv/app/main/radianback1.html"
+setURL("https://raw.githubusercontent.com/krdtv/app/main/radianback2.html"
+setURL("https://raw.githubusercontent.com/krdtv/app/main/radianback3.html"
+setURL("https://raw.githubusercontent.com/krdtv/app/main/radianback4.html"
